# scde_core

./: CMakeLists.txt  DefaultLibTargets.txt  DefaultLibsToLink.txt  README.md  naming_conventions.txt
commands/: Bugs  V2 ready
commands/Attr_Command/: Attr_Command.c  CMakeLists.txt  README.md
commands/Attr_Command/include/: Attr_Command.h
commands/Define_Command/: CMakeLists.txt  Define_Command.c  README.md
commands/Define_Command/include/: Define_Command.h
commands/Delete_Command/: CMakeLists.txt  Delete_Command.c  README.md
commands/Delete_Command/include/: Delete_Command.h
commands/Deleteattr_Command/: CMakeLists.txt  Deleteattr_Command.c  README.md
commands/Deleteattr_Command/include/: Deleteattr_Command.h
commands/Get_Command/: CMakeLists.txt  Get_Command.c  README.md
commands/Get_Command/include/: Get_Command.h
commands/Help_Command/: CMakeLists.txt  Help_Command.c  README.md
commands/IOWrite_Command/: CMakeLists.txt  IOWrite_Command.c  README.md
commands/Include_Command/: CMakeLists.txt  Include_Command.c  README.md
commands/Include_Command/include/: Include_Command.h
commands/List_Command/: CMakeLists.txt  List_Command.c  README.md
commands/Rename_Command/: CMakeLists.txt  README.md  Rename_Command.c
commands/Rereadcfg_Command/: CMakeLists.txt  README.md  Rereadcfg_Command.c
commands/Save_Command/: CMakeLists.txt  README.md  Save_Command.c
commands/Set_Command/: CMakeLists.txt  README.md  Set_Command (Kopie).c  Set_Command.c  Setneu_Command.c
commands/Set_Command/include/: Set_Command.h
commands/Setstate_Command/: CMakeLists.txt  README.md  Setstate_Command.c
commands/Setstate_Command/include/: Setstate_Command.h
commands/Shutdown_Command/: CMakeLists.txt  README.md  Shutdown_Command.c
commands/Trigger_Command/: CMakeLists.txt  README.md  Trigger_Command.c
commands/Trigger_Command/include/: Trigger_Command.h
core/: ActivateCommand.c  ActivateModule.c  Activate_Module_Fn.c  Add_Event_Fn.c  Add_Query_Encoded_Fn.c  AnalyzeCommand.c  AnalyzeCommandChain.V1  AnalyzeCommandChain.c  Analyze_Command_Chain_Fn.c  Analyze_Command_Fn.V1  Analyze_Command_Fn.c  ArgParse.c  Arg_Parse_Fn.c  CMakeLists.txt  CallGetFnByDefName.c  CommandReloadModule.c  Create_Notify_List_Fn.c  Create_Reading_Fn.c  Defspec_2_Array.c  Delete_Notify_List_Fn.c  Do_Trigger_Fn.c  Eval_State_Format.c  FmtDateTime.c  Fmt_Time_Fn.c  GetDefinitionPtrByName.c  GetLoadedModulePtrByName.c  GetTiSt.c  GetUniqueTiSt.c  Get_All_Readings.c  Get_All_Readings_Fn.c  Get_Attr_Val_By_Def_Name_And_Attr_Name.c  Get_Attr_Val_By_Def_Name_And_Attr_Name_Fn.c  Get_Def_And_Attr.c  Get_Def_And_Attr_Fn.c  Get_Definitions_That_Match_DefSpec_String.c  Get_Formated_Date_Time_Fn.c  Get_Ptr_To_Definition_By_Name_Fn.c  GoodDeviceName.c  GoodReadingName.c  HexDumpOut.c  (+19 more)
core/include/: ArgParse.h  SCDE.h
doc/: Module Development, Events.odt  Queue Capabilities.txt
include/: ArgParse_s.h  SCDE_s.h  SCDE_s.hx  argparse_s.h  argparse_s_fwd.h
modules/Global_Module/: CMakeLists.txt  GLOBAL_Module.c  GLOBAL_readings.c  Global_Module.c
modules/Global_Module/include/: GLOBAL_Module.h  GLOBAL_readings.h
modules/WebIf_Module/: CMakeLists.txt  WebIf_ActiveDirTokens.c  WebIf_Module.c  WebIf_Module_Mimes.c
modules/WebIf_Module/backup/: WebIf_ActiveDirTokens (Kopie).c
modules/WebIf_Module/include/: WebIf_ActiveDirTokens.h  WebIf_Module.h  sha1.h
